--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 
 body * {
     word-wrap: anywhere;
+    margin: 0;
+    padding: 0;
 }
 
 /*
@@ -11,6 +18,14 @@ button {
 .container {
     display: block;
     max-width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.container-full {
+    display: block;
+    max-width: 100%;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -69,4 +84,82 @@ button {
 
 .item:first-child {
     grid-column: 1 / 3;
+}
+
+#hiddenContent {
+    visibility: visible;
+    animation: all 0.2s;
+}
+
+#hiddenContent .hidden {
+    visibility: hidden;
+    animation: all 0.2s;
+    animation-name: fade-out;
+}
+
+@keyframes fade-in {
+    0% {
+      visibility: hidden;
+      opacity: 0;
+    }
+  
+    50% {
+      visibility: visible;
+      opacity: 0.5;
+    }
+  
+    100% {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+@keyframes fade-out {
+    100% {
+      visibility: hidden;
+      opacity: 0;
+    }
+  
+    50% {
+      visibility: visible;
+      opacity: 0.5;
+    }
+  
+    0% {
+      visibility: visible;
+      opacity: 1;
+    }
+}
+
+.trans-box2:hover {
+    clip-path: inset(0 0% 0 100%);
+}
+
+.trans-box2 {
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    align-items: center;
+    clip-path: inset(0 0 0 0%);
+    transition-duration: 1000ms;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.trans-box2-wrap {
+    height: 30rem;
+    width: 100%;
+    content: "";
+    background-image: linear-gradient(244deg, #9408ff 25% 35%, transparent);
+    position: relative;
+}
+
+.trans-box2-inside {
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-family: 'Courier New', Courier, monospace;
 }
